--- a/AWSLambda/package.json
+++ b/AWSLambda/package.json
@@ -8,6 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server-lambda": "^1.1.2",
-    "graphql": "^0.11.3"
+    "graphql": "^0.11.3",
+    "graphql-tools": "^1.2.2",
+    "lodash": "^4.17.4"
   }
 }
