--- a/AWSLambda/package.json
+++ b/AWSLambda/package.json
@@ -10,6 +10,7 @@
     "apollo-server-lambda": "^1.1.2",
     "graphql": "^0.11.3",
     "graphql-tools": "^1.2.2",
+    "lambda-local": "^1.4.2",
     "lodash": "^4.17.4"
   }
 }
