--- a/AWSLambda/package.json
+++ b/AWSLambda/package.json
@@ -7,9 +7,9 @@
   "author": "Miguel Monwoo",
   "license": "MIT",
   "dependencies": {
-    "apollo-server-lambda": "^1.1.2",
-    "graphql": "^0.11.3",
-    "graphql-tools": "^1.2.2",
+    "apollo-server-lambda": "*",
+    "graphql": "*",
+    "graphql-tools": "*",
     "lambda-local": "^1.4.2",
     "lodash": "^4.17.4"
   }
